# learn_qxorm_manual

./: .gitignore  CMakeLists.txt  QxOrm笔记.md
inc/: export.hpp  person.hpp
src/: main.cpp  person.cpp
